Rename referral model to screening model
Change referral routes, controllers, and tables
to screening

[#131829393]
