# app/models/referral_address.rb
@@ -1,8 +1,8 @@
 # frozen_string_literal: true
 
 # Referral Address model which represents
-# the join model between referral and address
+# the join model between screening and address
 class ReferralAddress < ActiveRecord::Base
-  belongs_to :referral
+  belongs_to :screening
   belongs_to :address
 end
