# app/models/referral_person.rb
@@ -3,6 +3,6 @@
 # Referral Person model which represents
 # the join model between referral and person
 class ReferralPerson < ActiveRecord::Base
-  belongs_to :referral
+  belongs_to :screening
   belongs_to :person
 end
